--- a/index.htm
+++ b/index.htm
@@ -3,6 +3,11 @@
     <title>my project</title>
   </head>
   <body>
-    <a href="page2.htm">page 2</a>
+    <h1>this is page 2</h1>
+    <p>
+    <a href="index.htm">page 1</a>
+    <p>
+    <img src="BETHESDA_1.png" alt="" width="600" height="400">
+    <img src="BETHESDA_2.jpg" alt="" width="600" height="400">
   </body>
 </html>
