--- a/index.htm
+++ b/index.htm
@@ -3,9 +3,8 @@
     <title>my project</title>
   </head>
   <body>
-    <h1>this is page 2</h1>
-    <p>
-    <a href="index.htm">page 1</a>
+    <h1> BETHESDA </h1>
+    <a href="page2.htm">page 2</a>
     <p>
     <img src="BETHESDA_1.png" alt="" width="600" height="400">
     <img src="BETHESDA_2.jpg" alt="" width="600" height="400">
