--- a/page2.htm
+++ b/page2.htm
@@ -3,7 +3,17 @@
     <title>my project</title>
   </head>
   <body>
-    <h1>this is page 2</h1>
+    <h1>BETHESDA</h1>
+    <h3> wat is BETHESDA </h3>
+    
+    <p>BETHESDA is a game company that has gotten some criticism becouse of resent games and updates. see the links for reactions peaple have</p>
+    <p>
+    <a href="https://www.youtube.com/watch?v=YPN0qhSyWy8">It Just Works (BETHESDA the Musical)</a>
+    <p>
+    <a href="https://www.youtube.com/watch?v=HH70VZFYyGQ">top ten bethesda fails</a>
+    <p>
+    <a href="https://www.ccn.com/how-fallout-76-shows-bethesdas-utter-contempt-for-gamers/">bethesda's blunder</a>
+    <p>
     <a href="index.htm">page 1</a>
   </body>
 </html>
