--- a/index.htm
+++ b/index.htm
@@ -1,12 +1,13 @@
 <html>
   <head>
-    <title>my project</title>
+    <title>BETHESDA</title>
   </head>
   <body>
     <h1> BETHESDA </h1>
-    <a href="page2.htm">page 2</a>
     <p>
     <img src="BETHESDA_1.png" alt="" width="600" height="400">
     <img src="BETHESDA_2.jpg" alt="" width="600" height="400">
+    <p>
+    <a href="page2.htm">page 2</a>
   </body>
 </html>
